--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ Description: SemPress is a respsonsive theme perfect for personal blogs. Rebuilt
 Version: 1.1-wpcom
 License: GNU General Public License
 License URI: license.txt
-Tags: black, blog, classic-menu, clean, custom-background, custom-colors, custom-menu, elegant, featured-images, flexible-header, fluid-layout, full-width-template, gray, infinite-scroll, light, minimal, one-column, portfolio, post-formats, responsive-layout, right-sidebar, rtl-language-support, simple, sticky-post, translation-ready, two-columns, video, white
+Tags: black, blog, classic-menu, clean, custom-background, custom-colors, custom-menu, elegant, featured-images, flexible-header, fluid-layout, full-width-template, gray, infinite-scroll, light, minimal, one-column, post-formats, responsive-layout, right-sidebar, rtl-language-support, simple, sticky-post, translation-ready, two-columns, video, white
 Text Domain: sempress
 
 This theme, like WordPress, is licensed under the GPL.
